fix: fix background colors and spacing

--- a/src/app/components/camping-attributes/camping-attributes.component.scss
+++ b/src/app/components/camping-attributes/camping-attributes.component.scss
@@ -2,7 +2,7 @@
   margin: 3rem;
   padding: 20px;
   position: relative;
-  background-color: white;
+  //background-color: white;
   color: black;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
@@ -13,10 +13,10 @@
   .camping-attributes-title {
     h2 {
       margin-bottom: 1.5rem;
-      -webkit-user-select: none; /* Safari */
-      -moz-user-select: none; /* Firefox */
-      -ms-user-select: none; /* IE10+/Edge */
-      user-select: none; /* Standard */
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
     }
   }
 }
