--- a/src/app/components/common/single-product/single-product.component.scss
+++ b/src/app/components/common/single-product/single-product.component.scss
@@ -1,9 +1,10 @@
 .single-element {
   transition: opacity 0.3s ease;
   aspect-ratio: 16 / 9;
-  border: 1px solid var(--gray);
+  //border: 1px solid var(--gray);
   border-radius: 8px;
   cursor: pointer;
+  background-color: white;
 
   img {
     border-radius: 8px 8px 0 0;
@@ -14,6 +15,11 @@
   }
 
   p {
-    margin: 1rem;
+    margin: 1rem 1rem 0;
+    background-color: white;
+  }
+
+  .spacing {
+    height: 1rem;
   }
 }
