--- a/src/app/components/details/app-details.component.scss
+++ b/src/app/components/details/app-details.component.scss
@@ -2,7 +2,7 @@
   margin: 3rem;
   padding: 20px;
   position: relative;
-  background-color: white;
+  //background-color: white;
   color: black;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
